app.css
/* ... */
.nav-link{
    font-size: 20px;
    font-weight: 400;
    color: #fff;
    font-family: 'Poppins', sans-serif;
    margin-left: 10px;
}

.nav-link:hover{
    background: -webkit-linear-gradient(#fff, #999898);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
    font-weight: 400;
}

.nav-logo {
    font-size: 20px;
    width: 100%;
    font-weight: 600;
    color: white;
    font-family: 'Poppins', sans-serif;
    margin-left: 40px;

}

.nav-logo:hover{
    background: -webkit-linear-gradient(#fff, #999898);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

@media only screen and (max-width: 768px) {
    .nav-menu {
        position: fixed;
        left: -110%;
        top: 37px;
        flex-direction: column;
        width: 95%;
        text-align: center;
        transition: 0.3s;
        box-shadow:white;
        background-color: #212330;

    }

    .nav-menu.active {
        left: 0;
      margin-right: 50px !important;
    }

    .nav-item {
        margin-right: 85px;
        margin-top: 15px;
        margin-bottom: 15px;
      text-align: right;
    }

    .hamburger {
        display: block;
      cursor: pointer;
      margin-right: 5%;
    }

    .nav-link{
        font-weight: 400;
    font-size: 16px;
    color: white;
    text-align: center;
    /* border-radius: 10px; */
    /* background-color: white;
    border: white solid 15px;
    opacity: 0.8; */
    margin-left: auto;
    margin-right: auto;

    }

    .nav-logo{
        margin-left: 20px;
    }

}

/* GENERAL LANDING */

.firstlandingsection h1{
  margin-bottom: 40px;
}

.firstlandingsection p{
  line-height: 35px;
}

/* GENERAL BUTTON */

.general-button {
  background-color: white;
  text-decoration: none;
  color: black;
  font-weight: 400;
  font-size: 14px;
  border: 1.5px solid black;
  border-radius: 50px;
  padding-top: 13px;
  padding-bottom: 13px;
  padding-left: 33px;
  padding-right: 33px;
  font-family: 'Poppins';
  box-shadow: 0px 4px 0px 0px #B8B8B8, 0px 4px 0px 1px black;
}

/* SUBSCRIBE FORM */
.revue-form-field {
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 25px;
  padding-right: 25px;
  border-radius: 50px;
  border: 1px solid #989898;
  background-color: #EAE9E9;
  color:#989898;
  font-family: 'Poppins';
  margin-bottom: 20px;
  margin-top: 10px;
  text-align: center;
}


.subscribe-button {
  background-color: white;
  border: 1.5px solid black;
  border-radius: 50px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 33px;
  padding-right: 33px;
  font-family: 'Poppins';
  box-shadow: 0px 4px 0px 0px #B8B8B8, 0px 4px 0px 1px black;
}

.revuelinks {
  color: white;
  text-underline-offset: 3px;
}

.columns-home {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 70%;
  margin-right: auto;
  margin-left: auto;
  margin-bottom: -30px;
}

.column-home p{
  margin-top: -30px;
}

.column-home h2{
  margin-top: 0px;
}

.column-home{
  width:70%;
  text-align: left;
  font-size: 20px;
}

@media (min-width: 800px) {
  .columns-home {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    width: 70%;
  }
}

.resources-pic{
  text-align: center;
  height: 160px;
}

/* FOOTER, note: use inspect to find out that it was g.social.svg.mask */
g.social-svg-mask {
  fill: white !important;
}

.socialmediaicon {
  margin-left: 10px;
  margin-right: 10px;

}

.socialsfooter {
  font-size: 20px;
  line-height: 30px;
  margin-bottom: 20px;
  margin-top: 20px;
}


.footer{
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    background: #263238;
    text-align: center;
    color: #f4f4f4;
}

.icons{
    padding-top: 1rem;
}

.icons a{
    text-decoration: none;
    font-size: 2rem;
    margin: 0.5rem;
    color: #f4f4f4;
}

.company-name{
    font-size: 1.6rem;
    margin-top: 0.5rem;
}

@media (max-width: 500px){
    html{
        font-size: 50%;
    }
}    

@media(min-width: 501px) and (max-width: 768px){
    html{
    font-size: 50%;
    }
}    

/* ABOUT PAGE */

.container-1{
  width: 85%;
margin-right: auto;
margin-left: auto;
}
/* whats my story */
.skylermessageshot {
  width: 600px;  
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 60px;
}

.skylerartwork {
  width: 600px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 60px;
}


@media screen and (max-width: 700px) {
  .skylermessageshot {
    width: 300px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 60px;
  }
  .skylerartwork {
    width: 300px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 60px;
  }
}

/* Finding my passion for pushing pixels*/
.about-ptext-leftalign {
  margin-right: 18.15%;
  margin-left: 18.5%;
  margin-bottom: 30px;
  font-size: 20px;
  margin-top: 0;


}

.about-h2text{
  margin-right: 18.15%;
  margin-left: 18.5%;
  margin-top: 50px;
  margin-bottom: 30px;
  font-size: 1.5em;

}
.allabout-columns{
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  width: 90%;
  margin-right: auto;
  margin-left: auto;
  font-size: 20px !important;

}

.allabout-columns p{
  font-size: 20px !important;
 
}

.about-column-onright{
  width:100%;
  text-align: left;
  padding-left: 0px;
  margin-right: 100px;
  font-size: 20px;

}

.about-column-onleft{
  width: 100%;
  text-align: right;
  margin-right: -300px;
  margin-left: 15%;
  font-size: 20px;

}

.about-pic{
  width: 250px;
  margin-right: 250px;
}
/* ... */

